--- a/industrial_boiler.html
+++ b/industrial_boiler.html
@@ -503,7 +503,7 @@
   {
     "q": "The ratio of heat used versus liberated is a measure of:",
     "options": ["Boiler efficiency", "Boiler power", "Steam output", "Fuel efficiency"],
-    "answer": 0",
+    "answer": 0,
     "explanation": "This ratio quantifies boiler efficiency, reflecting heat utilization. Boiler power, steam output, and fuel efficiency are related but not the direct measure."
   },
   {
