--- a/estimating_costing.html
+++ b/estimating_costing.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Industrial Management Quiz</title>
+  <title>Estimating and costing Quiz</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   <style>
     * {
@@ -317,7 +317,7 @@
   </style>
 </head>
 <body>
-  <h1>Industrial Management Quiz</h1>
+  <h1>Estimating and costing Quiz</h1>
   <h2>Test Your Knowledge: 3 MCQs Will Appear in Exam</h2>
   <div class="quiz-container">
     <div id="timer">Time: 00:00</div>
