--- a/index.html
+++ b/index.html
@@ -307,13 +307,13 @@
             <span class="tooltip">Otto, Diesel, Brayton cycles, engine efficiency</span>
         </div>
         <div class="card">
-            <a href="thermodynamics.html">3. Thermodynamics — 127 MCQs</a>
+            <a href="thermodynamics.html">3. Thermodynamics — 167 MCQs</a>
             <span class="tooltip">Gas laws, Carnot efficiency, thermodynamic processes</span>
         </div>
-        <div class="card">
+<!--         <div class="card">
             <a href="thermal.html">3. Thermodynamics II MCQs 50 </a>
             <span class="tooltip">Gas laws, Carnot efficiency, thermodynamic processes</span>
-        </div>
+        </div> -->
         <div class="card">
             <a href="industrial_management.html">4. Basic Industrial Management — 61 MCQs</a>
             <span class="tooltip">Labor laws, ILO, safety management</span>
