--- a/index.html
+++ b/index.html
@@ -530,6 +530,11 @@
             <span class="tooltip">Full IQ practice</span>
         </div>
 
+                 <div class="card"><a href="mock-test16.html"><i class="fas fa-shield-alt"></i>24. Public management & gk</a></div>
+  <div class="card"><a href="mock-test17.html"><i class="fas fa-oil-can"></i> 25. gk </a></div>
+  <div class="card"><a href="mock-test18.html"><i class="fas fa-snowflake"></i>26 gk mock test</a></div>
+<div class="card"><a href="mock-test20.html"><i class="fas fa-snowflake"></i>27 2081 mechanics quiz</a></div>
+                 
     </div>
 
     <p>Here is the explanation in PDF of every topic of GM for 2nd paper</p>
