--- a/index.html
+++ b/index.html
@@ -499,7 +499,14 @@
             <a href="public-mock.html">Public management MCQs all topic wise (84 MCQs)</a>
             <span class="tooltip">84 MCQS FOR PUBLIC MAMNAGEMENT</span>
         </div>
-        
+     <div class="card">
+            <a href="main-public1.html">Part 1: Exam ma aako public management ko mcqs 45 ota</a>
+            <span class="tooltip">Exam ma aako public management ko mcqs 45 ota</span>
+        </div>       
+            <div class="card">
+            <a href="main-public2.html">Part 2: Exam ma aako public management ko mcqs 45 ota</a>
+            <span class="tooltip">Exam ma aako public management ko mcqs 45 ota</span>
+        </div>       
       
         <div class="card">
             <a href="public2.html">Public Management & GK Mock-Test 1 </a>
