--- a/index.html
+++ b/index.html
@@ -517,7 +517,10 @@
             <a href="publics.html"> Latest Public Management & GK Mock-Test 2 </a>
             <span class="tooltip"> latest public management and GK aako ques</span>
         </div>
-
+       <div class="card">
+            <a href="main-gk.html">GK MCQs ONLY (55 MCQs) latest paper gk FOR 8 GATE</a>
+            <span class="tooltip">GK 55 MCQS</span>
+        </div>
        
         <div class="card">
             <a href="gk.html">GK MCQs ONLY SET-1 (66 MCQs)</a>
